
nobase_include_HEADERS=sonic/nas_ndi_router_interface.h sonic/nas_ndi_switch.h sonic/nas_ndi_route.h sonic/nas_ndi_mirror.h sonic/nas_ndi_acl.h sonic/nas_ndi_port.h sonic/nas_ndi_plat_stat.h sonic/nas_ndi_mac.h sonic/hal_shell.h sonic/nas_ndi_init.h sonic/nas_ndi_common.h sonic/nas_ndi_qos.h sonic/nas_ndi_sflow.h sonic/nas_ndi_stg.h sonic/nas_ndi_vlan.h sonic/nas_ndi_lag.h

