#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([sonic-nas-ndi-api], [1.0.1], [sonicproject@gmail.com])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_SRCDIR([sonic/nas_ndi_router_interface.h])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
